--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "main": "src/electron-starter.js",
   "devDependencies": {
-    "electron": "^2.0.1",
-    "foreman": "^2.0.0",
-    "react-scripts": "^1.0.14"
+    "electron": "^4.0.7",
+    "foreman": "^3.0.1",
+    "react-scripts": "^2.1.5"
   },
   "dependencies": {
+    "@pusher/chatkit": "^0.7.18",
+    "add": "^2.0.6",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "pusher-chatkit-server": "^0.12.0",
     "react": "^16.0.0",
-    "react-desktop": "^0.3.5",
+    "react-desktop": "^0.3.9",
     "react-dom": "^16.0.0"
   },
   "scripts": {
@@ -16,5 +22,11 @@
     "test": "react-scripts test --env=jsdom",
     "electron": "electron .",
     "dev": "nf start -p 3002"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
